infrastructure/kubernetes/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  namespace: hireflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: hireflow:v4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000

          volumeMounts:
            - name: media-storage
              mountPath: /app/media

      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: django
  namespace: hireflow
spec:
  selector:
    app: django
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
